<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_learning_sysinfo_qt_viewer</name>
  <version>0.0.1</version>
  <description>Qt UI subscriber for sysinfo topic (C++).</description>
  <maintainer email="user@example.com">Ros2Learning</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Qt is a system dependency; rosdep typically resolves qtbase5-dev on Ubuntu. -->
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
