<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_learning_tb3_spawner</name>
  <version>0.0.1</version>
  <description>Service-based TurtleBot3 spawner for Gazebo (turtlebot3_gazebo world).</description>

  <maintainer email="user@example.com">Ros2Learning</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>ament_index_cpp</depend>
  <depend>ros2_learning_custom_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
